# NeurInSpectre_offsc

./: .dockerignore  .gitignore  AE.md  CITATION.cff  DEVELOPMENT_NOTES.md  DRAFT_CODE_AUDIT.md  Dockerfile  LICENSE  MANIFEST.in  QUICKSTART_CCS.md  QUICKSTART_CCS_OFFENSIVE.md  README.md  README_DETECTION.md  README_FRAMEWORK_LEGACY.md  README_OFFSEC.md  REPRODUCE.md  benign_prompts.txt  capture_obfuscated_gradients.py  comprehensive_testing_suite.py  enhanced_data_upload_system.py  enhanced_upload_integration.py  generate_nuscenes_labels.py  list_all_installed_models.py  mac_silicon_install.sh  mac_silicon_obfuscated_gradient_demo.py  mac_silicon_test.py  malicious_prompts_recent.txt  neurinspectre-security  nvidia_gpu_detection.py  nvidia_running_models.py  pyproject.toml  quick_model_list.py  quick_nvidia_check.py  requirements-frozen.txt  requirements.txt  requirements_enhanced_upload.txt  run_visualization_tests.py  sensitive_tokens.txt  setup.py  steg2_encoded_prompt.txt  (+15 more)
attack_data/: ednn_reference_texts.txt
configs/: blue.yaml  evaluation_smoke.yaml  red.yaml  table8_jpeg_quick.yaml
docs/: README_INDEX.md
models/: cifar10_cnn_ts.pt.meta.json  cifar10_resnet20_norm_ts.pt  cifar10_resnet20_norm_ts.pt.meta.json  ember_mlp_ts.pt.meta.json  imagenet100_resnet50.pt.meta.json  md_at_transform_ember_ts.pt.meta.json  md_distillation_ember_ts.pt.meta.json  md_gradient_reg_ember_ts.pt.meta.json  nuscenes_resnet18_trained.pt.meta.json
neurinspectre/: .directory_config  __init__.py  __main__.py  activation_steganography.py  ai_security_research_dashboard_2025.py  debug_info.py  ecc_activation_steganography.py  integrated_neurinspectre_system.py  test_mathematical_foundations.py  universal_gpu_detector.py
sample_upload_test_files/: ml_model_data.pkl  security_detection_rules.yaml  stix_1x_indicators.xml
scripts/: LaPlacian.py  download_carmon2019.py  download_cifar10.py  download_ember2018.py  ednn_human_eval_protocol.py  export_cifar10_torchscript.py  export_ember_torchscript.py  generate_nuscenes_label_map.py  generate_stub_models.py  loc_breakdown.sh  make_artifact_tarball.sh  reproduce_all.sh  reproduce_detection.sh  reproduce_module_table4.py  reproduce_module_table5.py  reproduce_table8.sh  rl_detection_loocv.py  run_baselines.sh  run_failure_analysis.sh  run_real_defense_experiments.py  run_synthetic_experiments.py  table8_chain_monitor.py  train_ember_defense_models.py  train_ember_real.py  train_nuscenes_real.py  vectorize_ember_safe.py  verify_atlas_mapping.py  volterra_decisive.py
tests/: __init__.py  test_activation_steganography_ecc.py  test_apgd.py  test_apgd_autoattack_parity.py  test_artifact_integrity.py  test_attack_budgets.py  test_attack_selection.py  test_attacks.py  test_attention_security_feature_sets.py  test_attention_security_head_mode.py  test_autotune.py  test_bpda.py  test_c2st.py  test_certified_defense_smoothing.py  test_characterization.py  test_checkpoint_tag_resolution.py  test_cli.py  test_cli_activation_steganography_encode.py  test_cli_activation_steganography_extract_ecc.py  test_cli_attacks.py  test_cli_baselines.py  test_cli_calibrate_thresholds.py  test_cli_drift_detect.py  test_cli_figures.py  test_cli_save_features.py  test_defenses.py  test_ednn_dim_selection.py  test_ednn_human_eval_protocol.py  test_ember_defense_training.py  test_eot.py  test_evaluate_attack_aliases.py  test_evaluation.py  test_fab.py  test_failure_modes.py  test_fix_suite.py  test_gradient_variance_fix.py  test_imagenet100_root_path.py  (+26 more)
(+207 files in other folders)
